# projects

./: pyproject.toml
projects/000_p1/data/: casualties_daily_gaza.csv  israel_civilian_targeting.csv  israel_demonstration.csv  israel_gdp_per_capita.csv  israel_political_violence.csv  west_bank_daily.csv
projects/000_p1/notebooks/: ex.ipynb  exploration.ipynb  world-population-analysis.ipynb
system/: cli.py
