[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polymath-lab"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
]

[project.scripts]
brah = "system.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["system"]
